# paul_bedrock_edition

./: .gitignore  CMakeLists.txt  build.sh  run.sh
src/: CMakeLists.txt  camera.c  camera.h  components.c  components.h  display.c  display.h  draw.c  draw.h  ecs.c  ecs.h  entities.c  entities.h  gameState.c  gameState.h  input.c  input.h  main.c  paul_math.c  paul_math.h  systems.c  systems.h
src/graphics/shaders/: static.vsh
src/input/: keyHandler.c  keyHandler.h
